[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bus.gd" type="Script" id=1]
[ext_resource path="res://VolumeBar.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[node name="Bus" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -205.0
margin_right = -327.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 75 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 105.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="VolumeSlider" type="VSlider" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 250.0
rect_min_size = Vector2( 14, 0 )
hint_tooltip = "Right-click to reset to 0"
min_value = -80.0
max_value = 24.0
step = 0.1
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 46.0
margin_bottom = 250.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 28.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="VolumeBarL" type="TextureProgress" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 12.0
margin_bottom = 250.0
rect_min_size = Vector2( 12, 0 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 3
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_progress = Color( 100, 100, 100, 1 )
nine_patch_stretch = true

[node name="VolumeBarR" type="TextureProgress" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 250.0
rect_min_size = Vector2( 12, 0 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 3
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_progress = Color( 100, 100, 100, 1 )
nine_patch_stretch = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 50.0
margin_right = 105.0
margin_bottom = 250.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="BusName" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 55.0
margin_bottom = 9.0
text = "Bus"

[node name="SoundTree" type="Tree" parent="HBoxContainer/VBoxContainer2"]
margin_top = 13.0
margin_right = 55.0
margin_bottom = 250.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
custom_constants/vseparation = 0
custom_constants/guide_width = 16
custom_constants/draw_guides = 0
custom_constants/scroll_speed = 10
custom_constants/draw_relationship_lines = 0
allow_reselect = true
allow_rmb_select = true
hide_root = true

[node name="SelectedItemPopup" type="PopupMenu" parent="HBoxContainer/VBoxContainer2/SoundTree"]
margin_right = 20.0
margin_bottom = 20.0

[node name="LabelPosition" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="VolumeLabel" type="Label" parent="LabelPosition"]
visible = false
margin_right = 105.0
margin_bottom = 250.0
size_flags_vertical = 1
text = "Lol??"

[connection signal="gui_input" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="item_collapsed" from="HBoxContainer/VBoxContainer2/SoundTree" to="." method="update_tree_height"]
[connection signal="item_rmb_selected" from="HBoxContainer/VBoxContainer2/SoundTree" to="." method="_on_SoundTree_item_rmb_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/SoundTree" to="." method="_on_SoundTree_item_selected"]
[connection signal="id_pressed" from="HBoxContainer/VBoxContainer2/SoundTree/SelectedItemPopup" to="." method="_on_SelectedItemPopup_id_pressed"]
